--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^7.2.3",
     "react-simple-jstree": "^0.2.2",
     "redux": "^4.0.5",
+    "sass": "^1.32.11",
     "styled-components": "^5.2.3"
   },
   "devDependencies": {
