--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
+    "apexcharts": "^3.26.1",
     "bootstrap": "^4.6.0",
     "next": "10.1.3",
     "next-images": "^1.7.0",
     "next-redux-wrapper": "^6.0.2",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.5.2",
+    "react-data-table-component": "^6.11.7",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.3",
     "react-simple-jstree": "^0.2.2",
