--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
     "apexcharts": "^3.26.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "next": "10.1.3",
     "next-images": "^1.7.0",
@@ -30,6 +31,7 @@
     "react-redux": "^7.2.3",
     "react-simple-jstree": "^0.2.2",
     "redux": "^4.0.5",
+    "redux-localstore": "^1.0.0",
     "sass": "^1.32.11",
     "styled-components": "^5.2.3"
   },
