--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "babel-jest": "^26.6.3",
     "enzyme": "^3.11.0",
     "jest": "^26.6.3",
+    "prettier": "2.2.1",
     "typescript": "^4.2.4"
   }
 }
