--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.27",
     "@material-ui/icons": "^4.11.2",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "@zeit/next-css": "^1.0.1",
@@ -33,7 +34,8 @@
     "redux": "^4.0.5",
     "redux-localstore": "^1.0.0",
     "sass": "^1.32.11",
-    "styled-components": "^5.2.3"
+    "styled-components": "^5.2.3",
+    "sweetalert2": "^10.16.7"
   },
   "devDependencies": {
     "@babel/core": "^7.13.16",
