--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@zeit/next-sass": "^1.0.1",
     "apexcharts": "^3.26.1",
     "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "dayjs": "^1.10.4",
     "next": "10.1.3",
     "next-images": "^1.7.0",
     "next-redux-wrapper": "^6.0.2",
